[project]
name = "agent-course-final-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.31.0",
    "itsdangerous>=2.2.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "smolagents[litellm,openai]>=1.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
